# Desktop_AI_Partner

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
.opencode/: server.lock.json
docs/: cubism5-github-benchmark-notes.md  cubism5-integration-plan.md
scripts/: build-cubism5-runtime.mjs  cubism5-runtime-entry.ts  tauri-wrapper.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: ai_adapter.rs  aliyun_tts_adapter.rs  image_encoder.rs  mod.rs  screenshot_adapter.rs  store_adapter.rs  tencent_asr_adapter.rs  tencent_asr_stream_adapter.rs
src-tauri/src/commands/: audio_commands.rs  capture_commands.rs  chat_commands.rs  config_commands.rs  log_commands.rs  mod.rs
src-tauri/src/config/: defaults.rs  mod.rs
src-tauri/src/errors/: app_error.rs  mod.rs
src-tauri/src/observability/: mod.rs
src-tauri/src/services/: capture_service.rs  chat_service.rs  config_service.rs  mod.rs
src-tauri/src/types/: capture_types.rs  chat_types.rs  config_types.rs  log_types.rs  mod.rs
src/lib/constants/: commands.ts  defaults.ts  events.ts  index.ts
src/lib/design-tokens/: colors.ts  glass.ts  spacing.ts  typography.ts
src/lib/services/: audio.service.ts  capture.service.ts  chat.service.ts  config.service.ts  index.ts  log.service.ts
src/lib/stores/: capture.svelte.ts  chat.svelte.ts  config.svelte.ts  index.ts  observability.svelte.ts  ui.svelte.ts
src/lib/types/: capture.types.ts  chat.types.ts  index.ts  (+2 more)
src/routes/: +layout.svelte
(+42 files in other folders)
